--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -1,5 +1,7 @@
 #audiovox {
-  width: 400px;
+  max-width: 400px;
+  width:100%;
+  margin: 0 auto;
   height: 500px;
   background: #9d9a9a;
   border-radius: 20px;
@@ -11,6 +13,7 @@
   gap: 20px;
   font-family: 'VCR OSD Mono', monospace;
   position: relative;
+  box-sizing: border-box;
 }
 
 #audiovox-screen {
@@ -105,4 +108,5 @@
 .enter{
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
+  height: 50px;
 }
